updated asins and asin_list to asinList
